# TouchOSC-GenMDM-X

./: README.md  dom.py  genmdm-x-v2.tosc  genmdm-x.tosc  genmdm-x.xml  genmdm-x2.tosc  main.py  pyproject.toml
docs/: ERRATA.md  GENMDM_103.txt  ISSUES.md
lua/root/: cc.lua  global.lua
lua/root/channel/: algomap.lua  channel.lua  fmalgo.lua  group_op.lua
lua/root/channel/op/: 1dr.lua  2dr.lua  am.lua  am_enable.lua  ar.lua  cc.lua  control.lua  dt.lua  mult.lua  rr.lua  ssg.lua  sus.lua  tl.lua
scripts/: control.lua  root.lua
scripts/channel/: algorithm.lua  algorithm_map.lua  algorithm_select.lua
scripts/global/: midi_channel.lua  reload.lua  save.lua
scripts/operator/: op.lua
touchosc/: layout.py
