[tool.poetry]
name = "touchosc-genmdm"
version = "0.1.0"
description = ""
authors = ["Mike Robinson <michael_robinson@live.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
